; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_posix.c_p_creat.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_posix.c_p_creat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@O_WRONLY = common dso_local global i32 0, align 4
@O_CREAT = common dso_local global i32 0, align 4
@O_TRUNC = common dso_local global i32 0, align 4
@O_BINARY = common dso_local global i32 0, align 4
@O_CLOEXEC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @p_creat(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i8*, i8** %3, align 8
  %6 = load i32, i32* @O_WRONLY, align 4
  %7 = load i32, i32* @O_CREAT, align 4
  %8 = or i32 %6, %7
  %9 = load i32, i32* @O_TRUNC, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @O_BINARY, align 4
  %12 = or i32 %10, %11
  %13 = load i32, i32* @O_CLOEXEC, align 4
  %14 = or i32 %12, %13
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @open(i8* %5, i32 %14, i32 %15)
  ret i32 %16
}

declare dso_local i32 @open(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
